--- a/index.html
+++ b/index.html
@@ -7,17 +7,36 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="grid">
-      <div class="grid-item"><img src="img/galaxy.jpg"></div>
-      <div class="grid-item width-2"><img src="img/starGalaxy.jpg"></div>
-      <div class="grid-item"><img src="img/starrySky.jpg"></div>
-  </div>
+    <!-- <div class="grid">
+      <div class="grid-sizer"></div>
+        <div class="grid-item"><img src="img/galaxy.jpg"></div>
+        <div class="grid-item grid-item--width-2"><img src="img/starGalaxy.jpg"></div>
+        <div class="grid-item grid-item--width-2 grid-item--height-2"><img src="img/starrySky.jpg"></div>
+        <div class="grid-item grid-item--height3"><img src="img/love.jpg"></div>
+        <div class="grid-item grid-item--width3 grid-item--height4"><img src="img/sakura.jpg"></div>
+        <div class="grid item grid-item--width2 grid-item--height3"><img src="img/hedgehog.jpg"></div>
+        <div class="grid item"><img src="img/cat.jpg"></div>
+        <div class="grid item"><img src="img/couple.jpg"></div>
+        <div class="grid item grid-item--height2"><img src="img/waterfall.jpg"></div>
+      </div> -->
 
 
-
+      <!--grid without content, working-->
+      <div class="grid">
+          <div class="grid-item"></div>
+          <div class="grid-item grid-item--width-2"></div>
+          <div class="grid-item grid-item--width-2 grid-item--height-2"></div>
+          <div class="grid-item grid-item--height3"></div>
+          <div class="grid-item grid-item--width3 grid-item--height4"></div>
+          <div class="grid item grid-item--width2 grid-item--height3"></div>
+          <div class="grid item grid-item--width4"></div>
+          <div class="grid item"></div>
+          <div class="grid item grid-item--height2"></div>
+        </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="js/script.js"></script>
   </body>
 </html>
